standards/gnds-2.0/try/c/src/v2.0/tsl/SCTApproximation.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// SCTApproximation is the basic handle type in this file. Example:
//    // Create a default SCTApproximation object:
//    SCTApproximation handle = SCTApproximationDefault();
// Functions involving SCTApproximation are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_TSL_SCTAPPROXIMATION
#define C_INTERFACE_TRY_V2_0_TSL_SCTAPPROXIMATION

#include "GNDStk.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct SCTApproximationClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ SCTApproximation
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct SCTApproximationClass *SCTApproximation;

// --- Const-aware handles.
typedef const struct SCTApproximationClass *const ConstHandle2ConstSCTApproximation;
typedef       struct SCTApproximationClass *const ConstHandle2SCTApproximation;
typedef const struct SCTApproximationClass *      Handle2ConstSCTApproximation;
typedef       struct SCTApproximationClass *      Handle2SCTApproximation;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstSCTApproximation
SCTApproximationDefaultConst();

// +++ Create, default
extern_c Handle2SCTApproximation
SCTApproximationDefault();

// --- Create, general, const
extern_c Handle2ConstSCTApproximation
SCTApproximationCreateConst();

// +++ Create, general
extern_c Handle2SCTApproximation
SCTApproximationCreate();

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
SCTApproximationAssign(ConstHandle2SCTApproximation This, ConstHandle2ConstSCTApproximation from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
SCTApproximationDelete(ConstHandle2ConstSCTApproximation This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
SCTApproximationRead(ConstHandle2SCTApproximation This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
SCTApproximationWrite(ConstHandle2ConstSCTApproximation This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
SCTApproximationPrint(ConstHandle2ConstSCTApproximation This);

// +++ Print to standard output, as XML
extern_c int
SCTApproximationPrintXML(ConstHandle2ConstSCTApproximation This);

// +++ Print to standard output, as JSON
extern_c int
SCTApproximationPrintJSON(ConstHandle2ConstSCTApproximation This);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif